# ormah

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  FEATURES.md  LICENSE  Makefile  README.md  hatch_build.py  install.sh  pyproject.toml
src/ormah/: cli.py  config.py  console.py  instructions.md  logging_setup.py  main.py  server_manager.py  setup.py
src/ormah/adapters/: cli_adapter.py  mcp_adapter.py  openai_adapter.py  space_detect.py  tool_schemas.py
src/ormah/agents/: ormah-maintenance.md
src/ormah/api/: middleware.py  routes_admin.py  routes_agent.py  routes_ingest.py  routes_ui.py
src/ormah/background/: auto_cluster.py  auto_linker.py  conflict_detector.py  consolidator.py  decay_manager.py  duplicate_merger.py  hippocampus.py  importance_scorer.py  job_tracker.py  llm_client.py  scheduler.py  session_watcher.py
src/ormah/embeddings/: __init__.py  (+8 more)
tests/: conftest.py  test_config.py  test_console.py  test_logging.py  test_setup.py
tests/smoke/: Dockerfile  run.sh
tests/test_adapters/: test_cli_adapter.py  test_space_detect.py
tests/test_api/: test_routes.py
tests/test_background/: test_auto_linker.py  test_conflict_detector.py  test_consolidator.py  test_decay_manager.py  test_duplicate_merger.py  test_hippocampus.py  test_importance_scorer.py  test_job_tracker.py  test_llm_adapters.py  test_llm_normalize.py  test_run_maintenance.py  test_session_watcher.py
tests/test_embeddings/: test_adapters.py  test_reranker.py
tests/test_engine/: test_adaptive_context.py  test_audit_log.py  test_feedback.py  test_hybrid_search.py  test_ingest.py  test_memory_engine.py  test_merge_undo.py  test_prompt_classifier.py  test_scoring_signals.py  test_self_node.py  test_spreading_activation.py  test_temporal_search.py  test_tier_manager.py  test_whisper_context.py
tests/test_index/: test_builder.py  test_graph.py
tests/test_store/: test_file_cache.py  test_file_store.py  test_markdown.py  test_markdown_enriched.py
tests/test_transcript/: test_parser.py
tests/test_whisper/: test_whisper_out.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  env.d.ts  styles.css  types.ts
(+32 files in other folders)
